# Kaglaw

./: .gitignore  FEATURES.md  README.md  pyproject.toml  run.py
kaglaw/: accounts.py  actions.py  budgets.py  compaction.py  config.py  db.py  excel_export.py  kaggle_client.py  memory_store.py  metrics.py  notebook_builder.py  orchestrator.py  runners.py  scheduler.py  settings_store.py
kaglaw/agent/: llm.py  loop.py  prompts.py  tools.py
kaglaw/web/: app.py
kaglaw/web/static/: style.css
kaglaw/web/templates/: _chat_transcript.html  _msg.html  accounts.html  base.html  batches.html  chat.html  chat_list.html  competition_detail.html  competitions.html  experiments.html  index.html  memory.html  notebooks.html  runs.html  settings.html  status.html
