[project]
name = "kaglaw"
version = "0.1.0"
description = "Internal multi-account Kaggle orchestrator (notebooks, submissions, stats)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "kaggle>=1.6.0",
    "apscheduler>=3.10",
    "openpyxl>=3.1",
    "pydantic>=2.5",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.40",
    "markdown-it-py>=3.0",
    "bleach>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kaglaw*"]
